# Reversi-AI

./: .gitmodules  CMakeLists.txt  README.md
Visualizer/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  Desk.cpp  Desk.h  Evaluator.cpp  Evaluator.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  Player.h  WindowPlayer.cpp  WindowPlayer.h  main.cpp
Visualizer/res/: random.model
common/: CMakeLists.txt  Desk.cpp  Desk.h  NeuralNetwork.h
train/: CMakeLists.txt  CompressedDesk.cpp  CompressedDesk.h  DeskState.cpp  DeskState.h  EpsilonGreedy.cpp  EpsilonGreedy.h  ModelTrainer.cpp  ModelTrainer.h  PositionDataset.cpp  PositionDataset.h  main.cpp
visualizer/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  Desk.h  Evaluator.cpp  Evaluator.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Player.h  WindowPlayer.cpp  WindowPlayer.h  main.cpp
visualizer/res/: black.model
